// user_management.dbml

// Enable UUID extension

Table Users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  username varchar(50) [unique]
  password_hash varchar(255)
  name varchar(50) [not null]
  avatar_url text
  email varchar(255) [unique]
  provider varchar(20) [note: "Enum: 'google', 'apple', 'local'"]
  provider_id varchar(255)
  role varchar(10) [default: 'user', note: "Enum: 'user', 'admin', 'super admin'"]
  is_active boolean [default: true]
  isVerify boolean [default: false]
  community_points int [default: 0]
  subscription_id uuid [not null]
  subscription_expiry timestamptz [note: "Cho phép NULL cho Free user và người đăng ký gói vĩnh viễn"]
  level varchar(3) [not null, note: "Enum: '1', '2', '3', '4', '5', '6', '7-9'"]
  badge_level int [not null, default: 0]
  language varchar(10) [not null, note: "Enum: 'Tiếng Việt', 'Tiếng Anh'"]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  last_login timestamptz
  
  Note: '''
  - Bảng trung tâm cho hồ sơ người dùng, hỗ trợ đăng nhập qua username/password, goole, apple.
  - Username/password_hash cho đăng nhập local (hash bcrypt), provider/provider_id cho OAuth (Google/Apple).
  - Email và name có thể null.
  - Điểm cộng đồng tổng hợp từ Posts/Comments (likes*10, posts*20, comments_received*20), lưu trực tiếp để tối ưu query.
  - isVerify hỗ trợ xác thực email, tăng bảo mật.
  - subscription_id: not null - tự động gán id gói free cho người dùng ngay khi tạo tài khoản
  '''
  
  Indexes {
    username [unique]
    email [unique]
    (provider, provider_id) [type: btree]
    created_at [type: btree]
    role [type: btree]
    community_points [type: btree]
  }
}

// Table UserSessions
Table UserSessions {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  login_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  logout_at timestamptz
  device varchar(50) [note: "mobile, web, desktop"]
  ip_address varchar(50)

  Note: '''
  - Lưu lại chi tiết từng phiên login/logout.
  - Dùng để tính toán thời gian online chi tiết hoặc phát hiện đăng nhập bất thường.
  '''

  Indexes {
    user_id [type: btree]
    login_at [type: btree]
  }
}

// Table UserDailyActivity
Table UserDailyActivity {
  user_id uuid [not null]
  date date [not null]
  minutes_online int [default: 0]
  login_count int [default: 0]

  Note: '''
  - Tóm tắt hoạt động theo ngày (minutes online, số lần login).
  - Hỗ trợ thống kê theo tuần/tháng dễ dàng.
  '''

  Indexes {
    user_id [type: btree]
    date [type: btree]
  }

  primary key (user_id, date)
}

// Table UserStreaks
Table UserStreaks {
  user_id uuid [primary key]
  current_streak int [default: 0]
  longest_streak int [default: 0]
  last_login_date date

  Note: '''
  - Quản lý chuỗi ngày đăng nhập liên tục (gamification).
  - current_streak reset nếu người dùng bỏ lỡ 1 ngày.
  - longest_streak lưu kỷ lục cao nhất để hiển thị thành tựu.
  '''
}

// Table RefreshTokens
Table RefreshTokens {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  token text [unique, not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  expires_at timestamptz [not null]
  
  Note: '''
  - Lưu trữ refresh token cho cơ chế xác thực, đảm bảo token là duy nhất.
  '''
  
  Indexes {
    user_id [type: btree]
    token [unique]
  }
}

// Relationships
Ref: UserSessions.user_id > Users.id [delete: cascade]
Ref: UserDailyActivity.user_id > Users.id [delete: cascade]
Ref: UserStreaks.user_id > Users.id [delete: cascade]
Ref: RefreshTokens.user_id > Users.id [delete: cascade]